--- a/onload.htm
+++ b/onload.htm
@@ -60,7 +60,7 @@ if (/WebKit/i.test(navigator.userAgent)) { // sniff
 }
 
 /* for other browsers */
-window.onload = init();
+window.onload = init;
 </script>
 
 
