載入隨機圖API使用範例

--- a/forbgapi.htm
+++ b/forbgapi.htm
@@ -25,7 +25,7 @@
 而如有需要在javascript中載入單一隨機圖檔url,可使用picurl變數呼叫,例如&lt;script&gt;alert(picurl)&lt;/script&gt;,
 或如本範例載入當成背景圖使用
 </textarea><br/>
-<script src="https://github.com/srobbin/jquery-backstretch/raw/master/jquery.backstretch.min.js"></script>
+<script src="https://rawgithub.com/srobbin/jquery-backstretch/master/jquery.backstretch.min.js"></script>
 <script>
 jQuery.backstretch(
       picurl, {
