--- a/onload.htm
+++ b/onload.htm
@@ -18,16 +18,19 @@ function init() {
 
   // do stuff
   alert("Page loaded!");
-};
+}
 
-/* for Mozilla/Opera9 */
+/* for Mozilla/Opera/IE */
 if (document.addEventListener) {
   document.addEventListener("DOMContentLoaded", init, false);
 }
-
-/* for Internet Explorer */
+else if(document.attachEvent){
+document.attachEvent("onDOMContentLoaded", init);
+}	
+else{;
+/* for old Internet Explorer */
 /*@cc_on 
-if (@_jscript_version <= 9){
+if (@_jscript_version < 6){
   document.write("<script id=__ie_onload defer src=javascript:void(0)><\/script>");
   var script = document.getElementById("__ie_onload");
   script.onreadystatechange = function() {
@@ -37,17 +40,6 @@ if (@_jscript_version <= 9){
   };
 }  
 @*/
-if(document.documentMode > 9){
-  /*  
-  document.write("<script id=__ie_onload defer src=javascript:void(0)><\/script>");
-  var script = document.getElementById("__ie_onload");
-  script.onreadystatechange = function() {
-    if (this.readyState == "complete") {
-      init(); // call the onload handler
-    }
-  };
-  //*/
-  document.attachEvent("onDOMContentLoaded", init);
 }
 
 /* for Safari */
