--- a/onload.htm
+++ b/onload.htm
@@ -19,15 +19,6 @@ function init() {
   // do stuff
   alert("Page loaded!");
 }
-
-/* for Mozilla/Opera/IE */
-if (document.addEventListener) {
-  document.addEventListener("DOMContentLoaded", init, false);
-}
-else if(document.attachEvent){
-document.attachEvent("onDOMContentLoaded", init);
-}	
-else{;
 /* for old Internet Explorer */
 /*@cc_on 
 if (@_jscript_version < 9){
@@ -40,7 +31,14 @@ if (@_jscript_version < 9){
   };
 }  
 @*/
+/* for Mozilla/Opera/IE */
+if (document.addEventListener) {
+  document.addEventListener("DOMContentLoaded", init, false);
 }
+else if(document.attachEvent){
+document.attachEvent("onDOMContentLoaded", init);
+}	
+else{;}
 
 /* for Safari */
 if (/WebKit/i.test(navigator.userAgent)) { // sniff
