--- a/ckfilesize.htm
+++ b/ckfilesize.htm
@@ -44,7 +44,9 @@ $("document").ready(function () {
                 } 
                 
              }  
-             @*/               
+             @*/
+             if(document.documentMode >= 9 || !document.all)
+             {               
              $(this).next().remove("img");             	
              var img2 = new Image();
              $(this).after(img2);
@@ -57,8 +59,9 @@ $("document").ready(function () {
              document.getElementById(img_id2).src = oFREvent.target.result;
              document.getElementById(img_id2).style.width = "200px";
              //document.getElementById(img_id2).style.height = "200px";
-                };
-                var f = this.files[0].size / 1024;          
+                };   
+                var f = this.files[0].size / 1024;
+             }              
 			 s += f;
             }
         });
