--- a/forbgapi.htm
+++ b/forbgapi.htm
@@ -14,7 +14,7 @@
 
 <body>
 <!--[if lt IE 8]>
-            <h1 class="chromeframe">您正使用不支援本API主要功能的瀏覽器,請至. <a href="http://browsehappy.com/">馬上升級您的瀏覽器</a> 或 <a href="http://www.google.com/chromeframe/?redirect=true">安裝 Google Chrome Frame</a> 以增進您瀏覽本頁面的體驗.</h1>
+            <h1>您正使用不支援本API主要功能的瀏覽器,請<a href="http://browsehappy.com/">馬上升級您的瀏覽器</a>,以增進您瀏覽本頁面的體驗.</h1>
 <![endif]-->
 <textarea cols="100" rows="10" wrap="virtual">
 載入API(瀏覽器需允許使用coockie)
