--- a/forbgapi.htm
+++ b/forbgapi.htm
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html>
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -9,7 +9,6 @@
 <!--[if gte IE 9]><!-->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
 <![endif]-->	
-<script src="http://flashguy.byethost32.com/forbgapi.php"></script>
 </head>
 
 <body>
@@ -17,24 +16,19 @@
             <h1>您正使用不支援本API主要功能的瀏覽器,請<a href="http://browsehappy.com/">馬上升級您的瀏覽器</a>,以增進您瀏覽本頁面的體驗.</h1>
 <![endif]-->
 <textarea cols="100" rows="10" wrap="virtual">
-載入API(瀏覽器需允許使用coockie)
-&lt;head&gt;&lt;/head&gt;間貼上&lt;script src=&quot;http://flashguy.byethost32.com/forbgapi.php&quot;&gt;&lt;/script&gt;
+載入API
+&lt;head&gt;&lt;/head&gt;間貼上&lt;script src=&quot;https://flashguy.ddns.net/forbgapi.js&quot;&gt;&lt;/script&gt;
 使用方法
 &lt;body&gt;&lt;/body&gt;間貼上&lt;img src=&quot;imgApi&quot; /&gt;
 即可取得隨機圖檔s
 而如有需要在javascript中載入單一隨機圖檔url,可使用picurl變數呼叫,例如&lt;script&gt;alert(picurl)&lt;/script&gt;,
 或如本範例載入當成背景圖使用
 </textarea><br/>
-<script src="https://rawgithub.com/srobbin/jquery-backstretch/master/jquery.backstretch.min.js"></script>
-<script>
-jQuery.backstretch(
-      picurl, {
-        fade: 750,
-        duration: 500
-    }
-      );
-</script>
+
 <h2>隨機圖1</h2><img title="隨機圖1" class="imgApi" width="400"/>
 <h2>隨機圖2</h2><img title="隨機圖2" class="imgApi" width="400"/>
+<script src="https://rawgithub.com/srobbin/jquery-backstretch/master/jquery.backstretch.min.js"></script>	
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="https://flashguy.ddns.net/forbgapi.js"></script>	
 </body>
 </html>
