--- a/forbgapi.htm
+++ b/forbgapi.htm
@@ -17,7 +17,7 @@
 <![endif]-->
 <textarea cols="100" rows="10" wrap="virtual">
 載入API語法
-&lt;/body&gt;前貼上&lt;script src=&quot;./js/axios.min.js&quot;&gt;&lt;/script&gt;
+&lt;/body&gt;前貼上&lt;script src=&quot;https://flashguy.ddns.net/js/axios.min.js&quot;&gt;&lt;/script&gt;
 &lt;script src=&quot;https://flashguy.ddns.net/forbgapi.js&quot;&gt;&lt;/script&gt;
 使用方法
 &lt;body&gt;&lt;/body&gt;間載入API語法的前面貼上&lt;img src=&quot;imgApi&quot; /&gt;
@@ -29,7 +29,7 @@
 <h2>隨機圖1</h2><img title="隨機圖1" class="imgApi" width="400"/>
 <h2>隨機圖2</h2><img title="隨機圖2" class="imgApi" width="400"/>
 <script src="https://rawgithub.com/srobbin/jquery-backstretch/master/jquery.backstretch.min.js"></script>	
-<script src="./js/axios.min.js"></script>
+<script src="https://flashguy.ddns.net/js/axios.min.js"></script>
 <script src="https://flashguy.ddns.net/forbgapi.js"></script>	
 </body>
 </html>
