--- a/responsive.htm
+++ b/responsive.htm
@@ -8,7 +8,7 @@
 <style>
 		.responsive {
         position: relative;
-        height:0
+        height:0;
         overflow: hidden;
     }
     .responsive iframe, object, embed {
